--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.0.0'
     compile project(':library')
+    compile 'com.mcxiaoke.volley:library:1.0.18'
+    compile 'com.amazonaws:aws-android-sdk-core:2.+'
+    compile 'com.amazonaws:aws-android-sdk-cognito:2.+'
+    compile 'com.amazonaws:aws-android-sdk-s3:2.+'
+    compile 'com.amazonaws:aws-android-sdk-ddb:2.+'
 }
