--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,9 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:22.2.0'
+    compile 'com.android.support:appcompat-v7:22.0.0'
+    compile 'com.android.support:cardview-v7:22.0.0'
+    compile 'com.android.support:recyclerview-v7:22.0.0'
     compile 'com.android.support:support-v4:22.0.0'
     compile project(':library')
     compile 'com.mcxiaoke.volley:library:1.0.18'
@@ -43,4 +45,6 @@ dependencies {
     compile 'com.amazonaws:aws-android-sdk-s3:2.+'
     compile 'com.amazonaws:aws-android-sdk-ddb:2.+'
     compile 'com.android.support:design:22.2.0'
+
+
 }
